[project]
name = "data-filtering"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jacob G-W", email = "jacoblevgw@gmail.com"},
]
dependencies = [
    "numpy>=2.0.1",
    "torch>=2.4.0",
    "tqdm>=4.66.5",
    "transformer-lens>=2.4.0",
    "einops>=0.8.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
